# claude_parallel_templates

./: CLAUDE.md  README.md  install.sh  package.json  pyproject.toml
base/: CLAUDE.md  README.md
base/.claude/: settings.json
base/.claude/commands/: analyze.md  init.md  quick-parallel.md
base/.claude/commands/cpt/: analyze.md  init.md  parallel.md  quick.md
base/.claude/commands/worktree/: parallel.md
base/.claude/skills/parallel-executor/: SKILL.md  agent-prompt.md  checkpoint.sh  filelock.sh  merge.sh  orchestrate.sh  plan.sh  resume.sh  spawn.sh  status.sh
bmad/: CLAUDE.md  README.md
bmad/.claude/commands/bmad/: parallel-story.md
bmad/.claude/skills/bmad-parallel/: SKILL.md  spawn-story.sh
claude_parallel_templates/: __init__.py  cli.py
spec-kit/: CLAUDE.md  README.md
spec-kit/.claude/commands/spec/: parallel-tasks.md
spec-kit/.claude/skills/spec-parallel/: spawn-tasks.sh
