[project]
name = "claude-parallel"
version = "0.3.0"
description = "Drop-in templates for running parallel Claude Code sessions with git worktrees"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
claude-parallel = "claude_parallel_templates.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_parallel_templates"]

[tool.hatch.build.targets.sdist]
include = [
    "claude_parallel_templates/",
    "base/",
    "bmad/",
    "spec-kit/",
    "install.sh",
]

[tool.hatch.build.targets.wheel.shared-data]
"base" = "share/claude-parallel/base"
"bmad" = "share/claude-parallel/bmad"
"spec-kit" = "share/claude-parallel/spec-kit"
"install.sh" = "share/claude-parallel/install.sh"
